<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sett_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settind_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sett_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:text="Close"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sett_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="Update"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sett_bar"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/background_black_bolder"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/smallest_horizontal_space"
                android:src="@drawable/login5"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_below="@+id/img_profile"
                android:textColor="#000"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Tap on the image to load your profile pic"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/name"
                android:textColor="#111010"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:background="@drawable/background_black_bolder"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/username"
                android:textAlignment="center"
                android:padding="5dp"
                android:textColor="@color/Text_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/phone"
                android:textColor="#111010"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_Phone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/background_black_bolder"
                android:layout_marginStart="10dp"
                android:hint="@string/phone_number"
                android:padding="5dp"
                android:textColor="@color/Text_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="Email:-"
                android:textColor="@color/Text_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_black_bolder"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:hint="Email_Address"
                android:padding="5dp"
                android:textColor="@color/Text_black"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>